tests/snapshots/file@variable@in_nested_block.lox.snap
---
source: tests/common/mod.rs
description: "{\n  var a = \"outer\";\n  {\n    print a; // expect: outer\n  }\n}"
input_file: crafting_interpreters_test_files/variable/in_nested_block.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false', found '{'
   ╭─[1:1]
 1 │ {
   · ┬
   · ╰── here
 2 │   var a = "outer";
   ╰────
Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false', found '{'
   ╭─[3:3]
 2 │   var a = "outer";
 3 │   {
   ·   ┬
   ·   ╰── here
 4 │     print a; // expect: outer
   ╰────
Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false', found '}'
   ╭─[5:3]
 4 │     print a; // expect: outer
 5 │   }
   ·   ┬
   ·   ╰── here
 6 │ }
   ╰────
